on w timeout, don't set ok=0, but set ok=1 and set err SERVER-1585