jstests/repl/block2.js
@@ -18,25 +18,26 @@ function check( msg ){
     assert.eq( tm.count() , ts.count() , "check: " + msg );
 }
 
+function worked( w , wtimeout ){
+    return dbm.getLastError( w , wtimeout ) == null;
+}
+
 check( "A" );
 
 tm.save( { x : 1 } );
-dbm.getLastError( 2 );
-check( "B" );
+assert( worked( 2 ) , "B" );
 
 tm.save( { x : 2 } );
-dbm.getLastError( 2 , 500 );
-check( "C" );
+assert( worked( 2 , 500 ) , "C" ) 
 
 rt.stop( false );
 tm.save( { x : 3 } )
 assert.eq( 3 , tm.count() , "D1" );
-assert.throws( function(){ dbm.getLastError( 2 , 500 ); } , "D2" )
+assert( ! worked( 2 , 500 ) , "D2" )
 
 s = rt.start( false )
 setup();
-dbm.getLastError( 2 , 30000 )
-check( "D3" )
+assert( worked( 2 , 30000 ) , "E" )
 
 rt.stop();
 
